--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,19 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.filter-orange {
+  filter: invert(54%) sepia(95%) saturate(7495%) hue-rotate(2deg) brightness(101%) contrast(104%);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+/* Swiper Pagination Customization */
+.my-custom-swiper-container .swiper-pagination {
+  bottom: 10px !important;
+  text-align: center !important;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.my-custom-swiper-container .swiper-pagination-bullet {
+  background-color: #ccc; /* สีเริ่มต้นของจุดที่ไม่ถูกเลือก */
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.my-custom-swiper-container .swiper-pagination-bullet-active {
+  background-color: #f97316; /* สีส้มสำหรับจุดที่ถูกเลือก */
 }
